# nosp

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.txt  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_STATUS.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  EVENT_HORIZON.md  FAQ.md  FEATURE_STATUS.md  LICENSE  OMNI-CORE_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TECHNICAL_DOCS.md  USAGE.md  deploy_to_github.sh  guide.md  main.py  pyproject.toml  requirements.txt  rules.yaml  run_nosp.bat  run_nosp.sh  run_nosp_linux.sh  setup.bat  setup.sh  setup_linux.sh  usage.md  verify_features.py
.cargo/: config.toml
.github/workflows/: ci.yml
native/c/: Makefile  packet_capture.c  packet_capture.h  packet_injector.c  packet_injector.h  pattern_matcher.c  pattern_matcher.h
python/nosp/: __init__.py  ai_engine.py  alerts.py  cage.py  cli.py  database.py  errors.py  forensics.py  ledger.py  linux_compat.py  mesh_network.py  ml_detector.py  native_bindings.py  platform_compat.py  plugin_manager.py  risk_scorer.py  rules_engine.py  session_manager.py  stability.py  system_hardener.py  system_tray.py  terminal.py
src/: clipboard_monitor.rs  dns_sinkhole.rs  event_horizon_wrappers.rs  file_integrity.rs  lib.rs  memory_analysis.rs  omni_wrappers.rs  registry_rollback.rs  self_defense.rs  usb_control.rs  vm_detection.rs
tests/: test_cli.py  test_error_handling.py  test_integration_privileged.py  test_python.py  test_stability.py
